<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout 
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/but1"
      	android:layout_weight="1"
        android:gravity="center"
        />
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/a1"
        android:scaleType="center"
        android:layout_weight="1"
        />
    
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/but2"
        android:layout_weight="1"
         android:gravity="center"
        />
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/a2"
        android:scaleType="center"
         android:layout_weight="1"
        />
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/but3"
        android:layout_weight="1"
         android:gravity="center"
        />
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/a3"
        android:scaleType="center"
         android:layout_weight="1"
        />
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/but4"
        android:layout_weight="1"
        android:gravity="center"
        />
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/a4"
        android:scaleType="center"
         android:layout_weight="1"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fanhui1"
        android:gravity="center"
         android:onClick="fanhui1"
        ></Button>

 

</LinearLayout>
</ScrollView>