<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.glj.ieye.MainActivity" >

    <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
	  android:id="@+id/butt3"
	  android:layout_weight="1"
	  android:text="@string/butt3"
	  android:onClick="StartMusic"
	  style="?android:attr/borderlessButtonStyle"
      ></Button>
  <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
	  android:id="@+id/butt4"
	  android:layout_weight="1"
	  android:text="@string/butt4"
	  android:onClick="BackTo"
	  style="?android:attr/borderlessButtonStyle"
      ></Button>
    
    <Button 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:id="@+id/butt5"
       android:text="@string/butt5"
       android:onClick="chakan1"
       style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>
